docs/pages/versions/v56.0.0/sdk/ui/jetpack-compose/segmentedbutton.mdx
---
title: 分段按钮
description: 适用于单选或多选的 Jetpack Compose 分段按钮组件。
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-56/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

分段按钮让应用用户可以从一组较少的选项中进行选择，这些选项在同一行中并排显示。它们对应于官方的 Jetpack Compose [Segmented Button](https://developer.android.com/develop/ui/compose/components/segmented-button) API。

有两种容器类型：

- **`SingleChoiceSegmentedButtonRow`**：同一时间只能选中一个按钮（类似单选按钮）。
- **`MultiChoiceSegmentedButtonRow`**：可以独立切换多个按钮（类似复选框）。

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/segmentedbutton/android-light.webp"
  darkSrc="/static/images/expo-ui/segmentedbutton/android-dark.webp"
  alt="带有 Day、Week 和 Month 选项的单选分段按钮行"
/>

## 安装

<APIInstallSection />

## 用法

### 单选分段按钮

当同一时间只能激活一个选项时，使用 `SingleChoiceSegmentedButtonRow`。每个 `SegmentedButton` 接受 `selected` 和 `onClick` 属性。

```tsx SingleChoiceExample.tsx
import { useState } from 'react';
import {
  Host,
  SingleChoiceSegmentedButtonRow,
  SegmentedButton,
  Text,
} from '@expo/ui/jetpack-compose';

export default function SingleChoiceExample() {
  const [selectedIndex, setSelectedIndex] = useState(0);
  const options = ['Day', 'Week', 'Month', 'Year'];

  return (
    <Host matchContents>
      <SingleChoiceSegmentedButtonRow>
        {options.map((label, index) => (
          <SegmentedButton
            key={label}
            selected={index === selectedIndex}
            onClick={() => setSelectedIndex(index)}>
            <SegmentedButton.Label>
              <Text>{label}</Text>
            </SegmentedButton.Label>
          </SegmentedButton>
        ))}
      </SingleChoiceSegmentedButtonRow>
    </Host>
  );
}
```

### 多选分段按钮

当多个选项可以独立切换时，使用 `MultiChoiceSegmentedButtonRow`。每个 `SegmentedButton` 接受 `checked` 和 `onCheckedChange` 属性。

```tsx MultiChoiceExample.tsx
import { useState } from 'react';
import {
  Host,
  MultiChoiceSegmentedButtonRow,
  SegmentedButton,
  Text,
} from '@expo/ui/jetpack-compose';

export default function MultiChoiceExample() {
  const [checkedItems, setCheckedItems] = useState([false, false, false, false]);
  const options = ['Wi-Fi', 'Bluetooth', 'NFC', 'GPS'];

  return (
    <Host matchContents>
      <MultiChoiceSegmentedButtonRow>
        {options.map((label, index) => (
          <SegmentedButton
            key={label}
            checked={checkedItems[index]}
            onCheckedChange={checked => {
              setCheckedItems(prev => {
                const next = [...prev];
                next[index] = checked;
                return next;
              });
            }}>
            <SegmentedButton.Label>
              <Text>{label}</Text>
            </SegmentedButton.Label>
          </SegmentedButton>
        ))}
      </MultiChoiceSegmentedButtonRow>
    </Host>
  );
}
```

### 自定义颜色

使用 `SegmentedButton` 上的 `colors` 属性来自定义其在激活、未激活和禁用状态下的外观。

```tsx CustomColorsExample.tsx
import { useState } from 'react';
import {
  Host,
  SingleChoiceSegmentedButtonRow,
  SegmentedButton,
  Text,
} from '@expo/ui/jetpack-compose';

export default function CustomColorsExample() {
  const [selectedIndex, setSelectedIndex] = useState(0);
  const options = ['$', '$$', '$$$', '$$$$'];

  return (
    <Host matchContents>
      <SingleChoiceSegmentedButtonRow>
        {options.map((label, index) => (
          <SegmentedButton
            key={label}
            selected={index === selectedIndex}
            onClick={() => setSelectedIndex(index)}
            colors={{
              activeContainerColor: '#6200EE',
              activeContentColor: '#FFFFFF',
            }}>
            <SegmentedButton.Label>
              <Text>{label}</Text>
            </SegmentedButton.Label>
          </SegmentedButton>
        ))}
      </SingleChoiceSegmentedButtonRow>
    </Host>
  );
}
```

## API

```tsx
import {
  SingleChoiceSegmentedButtonRow,
  MultiChoiceSegmentedButtonRow,
  SegmentedButton,
} from '@expo/ui/jetpack-compose';
```

<APISection packageName="expo-ui/jetpack-compose/segmentedbutton" apiName="SegmentedButton" />
